--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0"
